# logsnap

./: .gitignore  CONTRIBUTING.md  FEEDBACK.md  README.md  ROADMAP.md  VERSIONING.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/logsnap/: cli.py
src/logsnap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
