[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "logsnap"
version = "1.1.1"
description = "CLI tool to analyze log files (ERROR/WARNING) with context and report export"
requires-python = ">=3.12"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
logsnap = "logsnap.cli:main"
